--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
 	"printWidth": 100,
+	"tabWidth": 2,
+	"useTabs": true,
 	"semi": true,
 	"singleQuote": true,
-	"tabWidth": 2,
 	"trailingComma": "es5",
-	"useTabs": true,
+	"bracketSpacing": true,
+	"bracketSameLine": false,
+	"arrowParens": "avoid",
 	"plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"]
 }
