--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
 		"test": "playwright test"
 	},
 	"dependencies": {
-		"@astrojs/image": "^0.16.7",
-		"@astrojs/mdx": "^0.19.1",
-		"@astrojs/tailwind": "^3.1.1",
-		"@astrojs/ts-plugin": "^0.4.4",
-		"astro": "^2.3.4",
-		"astro-icon": "^0.8.0",
-		"astro-navbar": "^1.2.0",
-		"astro-seo": "^0.7.2",
-		"tailwindcss": "^3.0.24"
+		"@astrojs/mdx": "^4.3.0",
+		"@astrojs/react": "^4.3.0",
+		"@astrojs/tailwind": "^6.0.2",
+		"@astrojs/ts-plugin": "^0.4.5",
+		"@iconify/react": "^6.0.0",
+		"astro": "^5.11.0",
+		"astro-icon": "^0.8.1",
+		"astro-navbar": "^1.2.3",
+		"astro-seo": "^0.7.6",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwindcss": "^3.4.17"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.33.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-astro": "^0.8.0",
-		"prettier-plugin-tailwindcss": "^0.2.8"
+		"@playwright/test": "^1.54.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.14"
 	}
 }
