Agregar soporte para internacionalización en varios componentes. Se implementa la función de traducción en las secciones "Acerca de", "Contacto", "Proyectos", "Hero", "Navbar" y "Footer". También se añade un nuevo alias en la configuración de TypeScript para facilitar la importación de contenido.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
 			"@components/*": ["components/*"],
 			"@layouts/*": ["layouts/*"],
 			"@assets/*": ["assets/*"],
-			"@pages/*": ["pages/*"]
+			"@pages/*": ["pages/*"],
+			"@content/*": ["content/*"]
 		}
 	}
 }
